discussion/kv_engine/161740/161740_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Trace CM::queueLock

Change-Id: Ic325a1090de0debd8e54aa5f85b16648b9a24570

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-23 12:53:20.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-23 14:50:41.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34320/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34320/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40319/ : FAILURE

Failure of GoogleTest "TransportProtocols/AuditTest.AuditStartedStopped/Mcbp":

<pre>
[ RUN      ] TransportProtocols/AuditTest.AuditStartedStopped/Mcbp
unknown file: error: C++ exception with description "MemcachedConnection::recvFrame(): Timed out after waiting 0ms for a response for CONFIG_RELOAD" thrown in TearDown().
[  FAILED  ] TransportProtocols/AuditTest.AuditStartedStopped/Mcbp, where GetParam() = Mcbp (2270 ms)
TransportProtocols/AuditTest.AuditStartedStopped/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40319/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12764/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "CheckpointVisitor::visitBucket");
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12764/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12764/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15146/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11554/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2402/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14636/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14378/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2435/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13521/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22646/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
